--- a/TomRPCClient/TomRPCClient.csproj
+++ b/TomRPCClient/TomRPCClient.csproj
@@ -2,19 +2,18 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{AD64E5B4-87E9-427F-8A34-F537B76F0AB4}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{059A3859-FD3D-4DD8-BBF9-F3CF2BE45C4D}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TomExecutor</RootNamespace>
-    <AssemblyName>TomExecutor</AssemblyName>
+    <RootNamespace>TomRPCClient</RootNamespace>
+    <AssemblyName>TomRPCClient</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,8 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,40 +38,21 @@
     <Reference Include="RabbitMQ.ServiceModel">
       <HintPath>..\libs\RabbitMQClient\RabbitMQ.ServiceModel.dll</HintPath>
     </Reference>
-    <Reference Include="SmartThreadPool">
-      <HintPath>..\libs\SmartThreadPool.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyAppDomain.cs" />
-    <Compile Include="Task.cs" />
-    <Compile Include="ExecutorServiceImpl.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestQueue.cs" />
-    <Compile Include="Executor.cs" />
-    <Compile Include="WorkerServiceClient.cs" />
+    <Compile Include="RPCClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TomComm\TomComm.csproj">
       <Project>{D63FCEAE-C208-4A0E-AA5A-7AB263EB787F}</Project>
       <Name>TomComm</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TomExecutorServiceContract\TomExecutorServiceContract.csproj">
-      <Project>{46340685-E572-462B-9A11-2503F57E26A6}</Project>
-      <Name>TomExecutorServiceContract</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TomWorkerServiceContract\TomWorkerServiceContract.csproj">
-      <Project>{332B1271-B546-4B55-951B-1763007DA74D}</Project>
-      <Name>TomWorkerServiceContract</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
