--- a/TomWorker/App.config
+++ b/TomWorker/App.config
@@ -1,8 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<tomWorker>
-		<services>
-			<service name="" path=""></service>
-		</services>
-	</tomWorker>
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
+	</configSections>
+
+	<log4net debug="false">
+		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<param name="File" type="log4net.Util.PatternString" value="D:\\log\\TomWorker\\log_%date{yyyy_MM_dd}.txt" />
+			<param name="AppendToFile" value="true" />
+			<param name="MaxSizeRollBackups" value="10" />
+			<param name="MaximumFileSize" value="5MB" />
+			<param name="RollingStyle" value="Size" />
+			<param name="StaticLogFileName" value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<param name="ConversionPattern" value="%d---%m%n" />
+			</layout>
+		</appender>
+		<root>
+			<level value="ALL" />
+			<appender-ref ref="RollingLogFileAppender" />
+		</root>
+	</log4net>
+	
+	
+	<appSettings>
+		
+		<add key="TomExecutorFileName" value="E:\project\Tom\src\Tom\TomExecutor\bin\Debug\TomExecutor.exe"/>
+		<add key="TomHostId" value="1"/>
+		<add key="TomWorkerServiceIP" value="192.168.20.133"/>
+		<add key="TomWorkerServicePort" value="1800"/>
+		<add key="TomDBConnectName" value="tom"/>
+	</appSettings>
+
+	<system.serviceModel>
+		<client>
+			<endpoint name="TomMasterService" address="http://localhost:1188/MasterService.svc" bindingConfiguration="Standard" binding="wsHttpBinding" contract="TomMasterServiceContract.IMasterService"></endpoint>
+		</client>
+		<bindings>
+			<wsHttpBinding>
+				<binding name="Standard" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288" maxReceivedMessageSize="655360000" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+					<readerQuotas maxDepth="32" maxStringContentLength="2147483647" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+					<reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
+					<security mode="None" />
+				</binding>
+			</wsHttpBinding>
+		</bindings>
+	</system.serviceModel>
 </configuration>
