--- a/TomWorker/App.config
+++ b/TomWorker/App.config
@@ -26,9 +26,8 @@
 	<appSettings>
 		
 		<add key="TomExecutorFileName" value="E:\project\Tom\src\Tom\TomExecutor\bin\Debug\TomExecutor.exe"/>
-		<add key="TomHostId" value="1"/>
+		<add key="TomAppId" value="1"/>
 		<add key="TomWorkerServiceIP" value="192.168.20.133"/>
-		<add key="TomWorkerServicePort" value="1800"/>
 		<add key="TomDBConnectName" value="tom"/>
 	</appSettings>
 
